--- a/gui/cameradialog.ui
+++ b/gui/cameradialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
-    <height>286</height>
+    <width>582</width>
+    <height>292</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,6 +32,9 @@
       </sizepolicy>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="margin">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QImageViewer" name="viewLabel" native="true">
         <property name="minimumSize">
@@ -40,8 +43,8 @@
           <height>120</height>
          </size>
         </property>
-        <property name="autoFillBackground">
-         <bool>true</bool>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(0, 0, 0);</string>
         </property>
        </widget>
       </item>
